--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
-
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Practise</title>
+    <style type="text/css"></style>
+  </head>
 
- <head>
+  <body>
+    <h1>Volim Gmaza</h1>
 
-   <title>Practise</title>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+      make a type specimen book. It has survived not only five centuries, but
+      also the leap into electronic typesetting, remaining essentially
+      unchanged. It was popularised in the 1960s with the release of Letraset
+      sheets containing Lorem Ipsum passages, and more recently with desktop
+      publishing software like Aldus PageMaker including versions of Lorem
+      Ipsum.
+    </p>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+      make a type specimen book. It has survived not only five centuries, but
+      also the leap into electronic typesetting, remaining essentially
+      unchanged. It was popularised in the 1960s with the release of Letraset
+      sheets containing Lorem Ipsum passages, and more recently with desktop
+      publishing software like Aldus PageMaker including versions of Lorem
+      Ipsum.
+    </p>
 
- </head>
-
- <body>
-
-   <h1>Volim Gmaza</h1>
-
-   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-   <p>Dnevne aktivnosti:</p>
-   <ul>
-
-       <li>Dorucak</li>
-       <li>Posao</li>
-       <li>Rucak</li>
-       <li>Trening</li>
-       <li>Vecera</li>
-
-   </ul>
-
- </body>
-
-
+    <p>Dnevne aktivnosti:</p>
+    <ul>
+      <li>Dorucak</li>
+      <li>Posao</li>
+      <li>Rucak</li>
+      <li>Trening</li>
+      <li>Vecera</li>
+    </ul>
+  </body>
 </html>
