--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="dropdown">
           <button class="dropbtn"></button>
           <div class="dropdown-content">
-            <a href="#">Menu</a>
+            <a href="#">Food Menu</a>
             <a href="#">Blog</a>
             <a href="#">Recipes</a>
           </div>
