--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
         </div>
       </div>
       <div class="photo">
+        <div class="logo_big">
+          <img src="Logo_gold.png" />
+        </div>
         <div class="intro">
           <h1>Lorem Ipsum</h1>
         </div>
-        <img src="food.jpg" />
+        <div class="image">
+          <img src="food.jpg" />
+        </div>
         <a href="#" class="myButton">VISE O NAMA</a>
       </div>
       <div class="title">
