--- a/index.html
+++ b/index.html
@@ -3,62 +3,365 @@
 <html>
   <head>
     <title>Practise</title>
-
+    <link
+      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+    <script src="js/app.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
     <div class="page">
+      <header class="mdc-top-app-bar">
+        <div class="mdc-top-app-bar__row">
+          <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+            <button
+              class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon--unbounded"
+              onclick="openMenu('.left-menu')"
+            >
+              menu</button
+            ><span class="mdc-top-app-bar__title logo"></span>
+          </section>
+          <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
+            <button
+              class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+              aria-label="Download"
+            >
+              file_download
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+              aria-label="Print this page"
+            >
+              print
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+              aria-label="Bookmark this page"
+            >
+              bookmark
+            </button>
+          </section>
+        </div>
+      </header>
+      <div class="mdc-menu mdc-menu-surface left-menu">
+        <ul
+          class="mdc-list"
+          role="menu"
+          aria-hidden="true"
+          aria-orientation="vertical"
+          tabindex="-1"
+        >
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">A Menu Item</span>
+          </li>
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">Another Menu Item</span>
+          </li>
+        </ul>
+      </div>
+
       <div class="header">
-        <div class="logo"></div>
-        <div class="dropdown">
-          <button class="dropbtn"></button>
-          <div class="dropdown-content">
-            <a href="#">Food Menu</a>
-            <a href="#">Blog</a>
-            <a href="#">Recipes</a>
+        <div class="header-item"></div>
+        <div class="header-item">
+          <div class="logo"></div>
+        </div>
+        <div class="header-item menu">
+          <div class="dropdown">
+            <button class="dropbtn"></button>
+            <div class="dropdown-content">
+              <a href="#">Food Menu</a>
+              <a href="#">Blog</a>
+              <a href="#">Recipes</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="photo">
-        <div class="logo_big">
-          <img src="Logo_gold.png" />
+      <div class="slide-container">
+        <span id="slider-image-1"></span>
+        <span id="slider-image-2"></span>
+        <span id="slider-image-3"></span>
+        <div class="image-container">
+          <img src="food.jpg" class="slider-image" />
+          <img src="food1.jpg" class="slider-image" />
+          <img src="food2.jpg" class="slider-image" />
         </div>
+        <div class="button-container">
+          <a href="#slider-image-1" class="slider-button"></a>
+          <a href="#slider-image-2" class="slider-button"></a>
+          <a href="#slider-image-3" class="slider-button"></a>
+        </div>
+
         <div class="intro">
           <h1>Lorem Ipsum</h1>
         </div>
-        <div class="image">
-          <img src="food.jpg" />
-        </div>
-        <a href="#" class="myButton">VISE O NAMA</a>
       </div>
+      <a href="#" class="myButton">VISE O NAMA</a>
       <div class="title">
         <h1>Lorem Ipsum</h1>
       </div>
       <div class="content">
-        <p class="loremipsum">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+        <p class="text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+          been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+          a galley of type and scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting, remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+          Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.
         </p>
-        <p class="loremipsum">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+        <p class="text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+          been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+          a galley of type and scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting, remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+          Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.
         </p>
       </div>
+    </div>
+
+    <div class="cardHolder">
+      <div class="mdc-card demo-card">
+        <div class="mdc-card__primary-action demo-card__primary-action" tabindex="0">
+          <div
+            class="mdc-card__media mdc-card__media--16-9 demo-card__media"
+            style="background-image: url('newyork.jpg');"
+          ></div>
+          <div class="demo-card__primary">
+            <h2 class="demo-card__title mdc-typography mdc-typography--headline6">
+              Our Changing Planet
+            </h2>
+            <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2">
+              by Kurt Wagner
+            </h3>
+          </div>
+          <div class="demo-card__secondary mdc-typography mdc-typography--body2">
+            Visit ten places on our planet that are undergoing the biggest changes today.
+          </div>
+        </div>
+        <div class="mdc-card__actions">
+          <div class="mdc-card__action-buttons">
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Read
+            </button>
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Bookmark
+            </button>
+          </div>
+          <div class="mdc-card__action-icons">
+            <button
+              class="mdc-icon-button mdc-card__action mdc-card__action--icon--unbounded"
+              aria-pressed="false"
+              aria-label="Add to favorites"
+              title="Add to favorites"
+            >
+              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
+              <i class="material-icons mdc-icon-button__icon">favorite_border</i>
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="Share"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              share
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="More options"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              more_vert
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-card demo-card">
+        <div class="mdc-card__primary-action demo-card__primary-action" tabindex="0">
+          <div
+            class="mdc-card__media mdc-card__media--16-9 demo-card__media"
+            style="background-image: url('radio.jpg');"
+          ></div>
+          <div class="demo-card__primary">
+            <h2 class="demo-card__title mdc-typography mdc-typography--headline6">
+              Our Changing Planet
+            </h2>
+            <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2">
+              by Kurt Wagner
+            </h3>
+          </div>
+          <div class="demo-card__secondary mdc-typography mdc-typography--body2">
+            Visit ten places on our planet that are undergoing the biggest changes today.
+          </div>
+        </div>
+        <div class="mdc-card__actions">
+          <div class="mdc-card__action-buttons">
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Read
+            </button>
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Bookmark
+            </button>
+          </div>
+          <div class="mdc-card__action-icons">
+            <button
+              class="mdc-icon-button mdc-card__action mdc-card__action--icon--unbounded"
+              aria-pressed="false"
+              aria-label="Add to favorites"
+              title="Add to favorites"
+            >
+              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
+              <i class="material-icons mdc-icon-button__icon">favorite_border</i>
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="Share"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              share
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="More options"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              more_vert
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-card demo-card">
+        <div class="mdc-card__primary-action demo-card__primary-action" tabindex="0">
+          <div class="mdc-card__media mdc-card__media--16-9 demo-card__media proba"></div>
+          <div class="demo-card__primary">
+            <h2 class="demo-card__title mdc-typography mdc-typography--headline6">
+              Our Changing Planet
+            </h2>
+            <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2">
+              by Kurt Wagner
+            </h3>
+          </div>
+          <div class="demo-card__secondary mdc-typography mdc-typography--body2">
+            Visit ten places on our planet that are undergoing the biggest changes today.
+          </div>
+        </div>
+        <div class="mdc-card__actions">
+          <div class="mdc-card__action-buttons">
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Read
+            </button>
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+              <span class="mdc-button__ripple"></span> Bookmark
+            </button>
+          </div>
+          <div class="mdc-card__action-icons">
+            <button
+              class="mdc-icon-button mdc-card__action mdc-card__action--icon--unbounded"
+              aria-pressed="false"
+              aria-label="Add to favorites"
+              title="Add to favorites"
+            >
+              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
+              <i class="material-icons mdc-icon-button__icon">favorite_border</i>
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="Share"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              share
+            </button>
+            <button
+              class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
+              title="More options"
+              data-mdc-ripple-is-unbounded="true"
+            >
+              more_vert
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br clear="all" />
+
+    <div class="tabs">
+      <div class="mdc-tab-bar" role="tablist">
+        <div class="mdc-tab-scroller">
+          <div class="mdc-tab-scroller__scroll-area">
+            <div class="mdc-tab-scroller__scroll-content">
+              <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true" tabindex="0">
+                <span class="mdc-tab__content">
+                  <span class="mdc-tab__icon material-icons" aria-hidden="true">favorite</span>
+                  <span class="mdc-tab__text-label">Favorites</span>
+                </span>
+                <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                  <span
+                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  ></span>
+                </span>
+                <span class="mdc-tab__ripple"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-tab-bar" role="tablist">
+        <div class="mdc-tab-scroller">
+          <div class="mdc-tab-scroller__scroll-area">
+            <div class="mdc-tab-scroller__scroll-content">
+              <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true" tabindex="0">
+                <span class="mdc-tab__content">
+                  <span class="mdc-tab__icon material-icons" aria-hidden="true">eco</span>
+                  <span class="mdc-tab__text-label">Eco</span>
+                </span>
+                <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                  <span
+                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  ></span>
+                </span>
+                <span class="mdc-tab__ripple"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-tab-bar" role="tablist">
+        <div class="mdc-tab-scroller">
+          <div class="mdc-tab-scroller__scroll-area">
+            <div class="mdc-tab-scroller__scroll-content">
+              <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true" tabindex="0">
+                <span class="mdc-tab__content">
+                  <span class="mdc-tab__icon material-icons" aria-hidden="true">alarm</span>
+                  <span class="mdc-tab__text-label">Alarm</span>
+                </span>
+                <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                  <span
+                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  ></span>
+                </span>
+                <span class="mdc-tab__ripple"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <button class="mdc-button mdc-button--unelevated foo-button" id="size" onclick="print()">
+        <div class="mdc-button__ripple"></div>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">eco</i>
+        <span class="mdc-button__label">Button</span>
+      </button>
     </div>
   </body>
 </html>
