--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <h1>Lorem Ipsum</h1>
         </div>
       </div>
-      <a href="#" class="myButton">VISE O NAMA</a>
+      <a href="javascript.html" class="myButton">VISE O NAMA</a>
       <div class="title">
         <h1>Lorem Ipsum</h1>
       </div>
