--- a/javascript.html
+++ b/javascript.html
@@ -5,46 +5,29 @@
     <style type="text/css"></style>
   </head>
   <body>
-    <div id="wrapper">Page 1</div>
-    <form>
-      <select onchange="imgU()">
-        <option value="">Select</option>
-        <option value="150x150">Small</option>
-        <option value="350x150">Medium</option>
-        <option value="750x150">Large</option>
-      </select>
-      <br />
-      Add Text
-      <input type="text" onchange="imgU()" />
-      <br />
-      Select Color
-      <input type="color" onchange="imgU()" />
-      <br />
-      <img src="http://via.placeholder.com/350x150/222/fff?text=Image1" id="myImage" />
-    </form>
+    <div>
+      <img class="mySlides" src="food.jpg" />
+      <img class="mySlides" src="food1.jpg" />
+      <img class="mySlides" src="food2.jpg" />
+    </div>
     <script>
-      var iSize = "350x150";
-      var iColor = "222";
-      var iText = "Image1";
-      function imgU() {
-        console.dir(event.target.value);
-        console.dir(event.target.parentElement.myImage.src);
-        if (event.target.type == "select-one") {
-          iSize = event.target.value;
-        } else if (event.target.type == "text") {
-          iText = event.target.value;
-        } else if (event.target.type == "color") {
-          var colorChange = event.target.value;
-          iColor = colorChange.replace("#", "");
-        }
+      var myIndex = 0;
 
-        var imSr = "http://via.placeholder.com/" + iSize + "/" + iColor + "/fff?text=" + iText;
-        event.target.parentElement.myImage.src = imSr;
-        message(imSr);
+      function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) {
+          myIndex = 1;
+        }
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 2000); // Change image every 2 seconds
       }
-      function message(m) {
-        var output = (document.getElementById("wrapper").innerHTML = m);
-      }
+
+      carousel();
     </script>
   </body>
 </html>
